Job/Logs/Train.err
  File "Train_job.py", line 58
    Var_X = Var_X_BIG_Extra, Verify = 0, Extra_n = '',Drop == 'Default',
                                                     ^
SyntaxError: positional argument follows keyword argument
WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0041s vs `on_train_batch_end` time: 0.0077s). Check your callbacks.
WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0043s vs `on_train_batch_end` time: 0.0063s). Check your callbacks.
WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0048s vs `on_train_batch_end` time: 0.0173s). Check your callbacks.
